[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daliuge-common"
description = "Data Activated (flow) Graph Engine - Common functionality"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "LGPLv2+"}
authors = [
    {name = "ICRAR DIA Group", email = "dia-all@icrar.org"}
]
dynamic = ["version"]
dependencies = [
    "gputil>=1.4.0",
    "merklelib @ git+https://github.com/pritchardn/merklelib",
    "pyzmq==25.1.1",
    "pydantic>=2.5",
    "boto3",
    "phonenumbers",
    "mailchecker",
    "ftfy",
    "toml",
    "pyyaml",
    "beautifulsoup4",
    "openpyxl",
    "xlrd",
    "xmltodict",
    "python-benedict[all]",
    "pylint"
]

[project.scripts]
dlg = "dlg.common.tool:run"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "dlg.version_helper.get_version"}
